# shrs_openai

./: Cargo.toml  README.md
examples/: basic.rs
src/: builtin.rs  lib.rs
